Update on Overleaf.

--- a/listas.tex
+++ b/listas.tex
@@ -9372,7 +9372,7 @@ y
 \end{bmatrix} \Rightarrow \begin{cases}
 6x+y = 5\\
 x + 9y = 2
-\end{cases} \Rightarrow Z = \left( \frac{43}{53}, \frac{7}{53} \right)
+\end{cases} \Rightarrow z = \left( \frac{43}{53}, \frac{7}{53} \right)
 \]
 Portanto, a melhor solução aproximada para o sistema será $\left( \frac{43}{53}, \frac{7}{53} \right).$
 }
