--- a/listas.tex
+++ b/listas.tex
@@ -6185,15 +6185,13 @@ A - I = \begin{bmatrix}
 \end{bmatrix}
 \]
 Logo, $\mbox{posto}(A-I) = 4,$ e $\dim(\Ker(A-I)) = 1.$ Assim, a forma de Jordan será
-\[
-J= \left[\begin{array}{cc:c:c:c:c}
+\[J= \left[\begin{array}{cc:c:c:c:c}
 1 & 0 & 0 & 0 & 0  \\
 1 & 1 & 0 & 0 & 0  \\ \hdashline
 0 & 0 & 0 & 0 & 0  \\ \hdashline
 0 & 0 & 0 & 2 & 0  \\ \hdashline
 0 & 0 & 0 & 0 & 3 \\
-\end{array}\right]
-\]
+\end{array}\right] \]
 }
 }
 \begin{exercicio}
@@ -7212,7 +7210,10 @@ Agora, para $x\in V$, então para $y\in V$ temos:
 logo $x-E(x)$ é ortogonal a $\mbox{Im }E$. Assim $E$ é a projeção ortogonal a $\mbox{Im E}.$
 }
 
-\exercicio{18} Sejam $V$ um espaço vetorial sobre $\mathbb{C}$ e $T \in \mathcal{L}(V).$ Prove que $T$ é autoadjunto se, e somente se $\prin{T(v), v} \in \mathbb{R},$ para todo $v \in V.$
+\begin{exercicio}
+ 
+ Sejam $V$ um espaço vetorial sobre $\mathbb{C}$ e $T \in \mathcal{L}(V).$ Prove que $T$ é autoadjunto se, e somente se $\prin{T(v), v} \in \mathbb{R},$ para todo $v \in V.$
+ \end{exercicio}
 \solucao{$(\Rightarrow)$ Seja $T$ um operador auto-adjunto. Então, sabemos que $T^{*} = T.$ Para mostrar que certo $z \in \mathbb{C}$ é real, basta verificar que $z = \overline{z}.$ Dado  $v \in V,$ tem-se que
 \[
 \langle T(v), v \rangle = \langle v, \textcolor{Brown}{T^{*}}(v) \rangle = \langle v, \textcolor{Brown}{T}(v) \rangle = \overline{\langle T(v),v \rangle} \Rightarrow \langle T(v), v \rangle \in \mathbb{R}
@@ -7223,6 +7224,7 @@ $(\Leftarrow)$ Dado $v \in V,$ se $\prin{T(v), v} \in \mathbb{R}$, então temos 
 \]
 Como $V$ é um espaço vetorial sobre $\mathbb{C},$ então pelo Exercício 19 podemos concluir que $T - T^{*}=0,$ acarretando $T = T^{*}.$
 }
+
 \exercicio{19} Sejam $V$ um espaço vetorial sobre $\mathbb{C}$ e $T \in \mathcal{L}(V).$ Prove que se $\prin{T(v), v} = 0,$ para todo $v \in V,$ então $T = 0.$ Dê um exemplo para mostrar que o mesmo resultado não é necessariamente
 verdadeiro se $V$ é um espaço vetorial sobre $\mathbb{R}.$ 
 \solucao{
@@ -7366,7 +7368,7 @@ iC=(B+iC)-C=(X+iY)-X=iY,
 portanto $C=Y$.
 }
 }
-\exercicio{23}
+\begin{exercicio}
 Sejam $S, T \in \mathcal{L}(V).$ Suponha que $S$ e $T$ admitem adjuntas.
 
 \dividiritens{
@@ -7376,13 +7378,13 @@ Sejam $S, T \in \mathcal{L}(V).$ Suponha que $S$ e $T$ admitem adjuntas.
 \task[\pers{d}] Se $T$ é autoadjunta, mostre que $S^{*}TS$ é autoadjunta.
 \task[\pers{e}] Mostre que se $S$ e $T$ são autoadjuntas, então $ST + TS$ é autoadjunta.
 }
-
+\end{exercicio}
 \solucao{\dividiritens{
-\task[\pers{a}] Se $S$ e $T$ são autoadjuntas, então $S = S^{*}$ e $T = T^{*},$ aí:
+\task[\pers{a}] Se $S$ e $T$ são autoadjuntas, então $S = S^{*}$ e $T = T^{*}.$ Logo, temos que
 \[
 ST=(ST)^*\Leftrightarrow ST=T^*S^*\Leftrightarrow ST=TS,
 \]
-ou seja, $ST$ é autoajdunta se e só se $ST=TS$.
+ou seja, $ST$ é autoadjunta se e somente se $ST=TS$.
 \task[\pers{b}] Considere
 \[
 S = \begin{bmatrix}
@@ -8678,6 +8680,46 @@ Tomando $v = u + w,$ obtemos um vetor $v$ tal que $\norm{v} = \sqrt{2}$ e $\norm
 
 %http://www.pee.ufrj.br/index.php/pt/producao-academica/dissertacoes-de-mestrado/2006-1/2006073101-2006073101/file
 \end{exercicio}
+
+\begin{exercicio}
+ As \emph{matrizes de Pauli} são matrizes complexas que surgem a partir do estudo do spin de elétrons na mecânica quântica, aparecendo na Equação de Schrödinger-Pauli, que descreve a interação do spin de uma partícula com um campo eletromagnético externo. Aparecem também na Teoria de Twistores. Elas são dadas por
+ \[
+ \sigma_1 = \begin{pmatrix}
+ 0 & 1 \\ 1 & 0
+ \end{pmatrix} \quad  \sigma_2 = \begin{pmatrix}
+ 0 & i \\ i & 0
+ \end{pmatrix} \quad \sigma_3 = \begin{pmatrix}
+ 1 & 0 \\ 0 & -1
+ \end{pmatrix}.
+ \]
+ \dividiritens{
+ \task[\pers{a}] Verifique que as matrizes de Pauli satisfazem as seguintes relações para todo $a, b, c \in \{1, 2, 3 \}:$
+ \begin{enumerate}
+     \item $\sigma_a^2 = I;$
+     \item $\{ \sigma_a,\sigma_b \} = \sigma_a\sigma_b + \sigma_b\sigma_a = 2 \delta_{ab}I;$
+     \item $[ \sigma_a, \sigma_b] = \sigma_a\sigma_b - \sigma_b\sigma_a = 2i \sum\limits_{c \in C} \varepsilon_{abc} \sigma_c,$ onde $C = \{1, 2, 3\} \setminus \{ a, b \}.$
+    \end{enumerate}
+     \task[\pers{b}] Mostre que $\{I, \sigma_1, \sigma_2, \sigma_3 \}$ forma uma base para o espaço vetorial das matrizes hermitianas $2 \times 2.$
+      \task[\pers{c}] Prove que $\langle I, i \sigma_1, i \sigma_2, i \sigma_3 \rangle$ é isomorfo à álgebra real dos Quatérnios $\mathbb{H}.$ 
+      }
+      \end{exercicio}
+     \begin{comment}
+     The real linear span of {{math|{<nowiki/>''I'', ''iσ''<sub>1</sub>, ''iσ''<sub>2</sub>, ''iσ''<sub>3</sub>}<nowiki/>}} is isomorphic to the real algebra of [[quaternions]] {{math|ℍ}}.  The isomorphism from {{math|ℍ}} to this set is given by the following map (notice the reversed signs for the Pauli matrices):
+:<math>
+  1 \mapsto I, \quad
+  \mathbf{i} \mapsto - \sigma_2\sigma_3 = - i \sigma_1, \quad
+  \mathbf{j} \mapsto - \sigma_3\sigma_1 = - i \sigma_2, \quad
+  \mathbf{k} \mapsto - \sigma_1\sigma_2 = - i \sigma_3.
+</math>
+
+Alternatively, the isomorphism can be achieved by a map using the Pauli matrices in reversed order,<ref>{{Cite book| first=Mikio |last=Nakahara | title=Geometry, topology, and physics | edition=2nd | publisher=CRC Press | isbn=978-0-7503-0606-5 | year=2003|postscript=<!-- Bot inserted parameter. Either remove it; or change its value to "." for the cite to end in a ".", as necessary. -->{{inconsistent citations}} |url=https://books.google.com/books?id=cH-XQB0Ex5wC&printsec=frontcover&dq=isbn:9780750306065&hl=en&sa=X&ved=0ahUKEwiVj5Kp7M7jAhVNQ80KHZ1qCWYQ6AEIKjAA#v=snippet&q=%22Pauli%20matrices%22%20OR%20%22Pauli%20matrix%22&f=false}}, [https://books.google.com/books?id=cH-XQB0Ex5wC&pg=PR22 pp. xxii].</ref>
+:<math>
+  1 \mapsto I, \quad
+  \mathbf{i} \mapsto i \sigma_3, \quad
+  \mathbf{j} \mapsto i \sigma_2, \quad
+  \mathbf{k} \mapsto i \sigma_1.
+</math>
+\end{comment}
 \newpage
 
 \section{\textcolor{Floresta}{Lista 5,5}}
@@ -8836,7 +8878,7 @@ a+b+c+d = abc+abd+acd+bcd \Rightarrow \frac{abc+abd+acd+bcd}{a+b+c+d} = 1.
 \]
 Substituindo no lado esquerdo da desigualdade, obtemos
 \[
-\sum\limits \sqrt{\frac{a^2 + \textcolor{Green}{1}}{2}} = \sum\limits \sqrt{\frac{a^2 + \textcolor{Green}{ \frac{abc+abd+acd+bcd}{a+b+c+d}}}{2}} =\sum\limits \sqrt{\frac{a^3 + a^2b+a^2c+a^2d + abc + abd + acd + bcd}{2(a+b+c+d)}}=  \sum\limits \sqrt{\frac{(a+b)(a+c)(a+d)}{2(a+b+c+d)}}
+\sum\limits \sqrt{\frac{a^2 + \textcolor{Green}{1}}{2}} = \sum\limits \sqrt{\frac{a^2 + \textcolor{Green}{ \frac{abc+abd+acd+bcd}{a+b+c+d}}}{2}} =\]\[  \sum\limits \sqrt{\frac{a^3 + a^2b+a^2c+a^2d + abc + abd + acd + bcd}{2(a+b+c+d)}}=  \sum\limits \sqrt{\frac{(a+b)(a+c)(a+d)}{2(a+b+c+d)}}
 \]
 Utilizando a desigualdade de Cauchy-Schwarz, temos que
 \[
@@ -9665,7 +9707,9 @@ Prove que $T^{*} = T.$
 
 \solucao{}
 
-\exercicio{35} Seja $T$ um operador autoadjunto. Mostre que $\Ker T^2 = \Ker T.$
+\begin{exercicio}
+ Seja $T$ um operador autoadjunto. Mostre que $\Ker T^2 = \Ker T.$
+\end{exercicio} 
 
 \solucao{Vamos mostrar as duas inclusões:
 \begin{itemize}
@@ -9686,16 +9730,24 @@ Portanto, concluímos que $x \in \Ker T.$
 Logo, $\Ker T^2 = \Ker T$ se $T$ for autoadjunto.
 }
 
-\exercicio{36} Seja $V$ um espaço complexo com produto interno. Prove que se $\prin{T(v), v}$ é real para
+\begin{exercicio}
+ 
+Seja $V$ um espaço complexo com produto interno. Prove que se $\prin{T(v), v}$ é real para
 qualquer $v \in V,$ então $T$ é autoadjunto.
 
+\end{exercicio}
 \solucao{Veja o exercício 18 da lista 5.}
 
-\exercicio{37} Sejam $S$ e $T$ autoadjuntos. Mostre que $ST$ é autoadjunto se e somente se $ST = TS.$
+\begin{exercicio}
+ 
+Sejam $S$ e $T$ autoadjuntos. Mostre que $ST$ é autoadjunto se e somente se $ST = TS.$
 
+\end{exercicio}
 \solucao{Veja o item a do exercício 23 da lista 5.}
 
-\exercicio{38} Para cada uma das seguintes matrizes simétricas $A,$, encontre uma matriz ortogonal $P$ para a qual a matriz $P^tAP$ seja diagonal, ou seja, encontre a Forma Alternativa de cada matriz:
+\begin{exercicio}
+ 
+Para cada uma das seguintes matrizes simétricas $A,$, encontre uma matriz ortogonal $P$ para a qual a matriz $P^tAP$ seja diagonal, ou seja, encontre a Forma Alternativa de cada matriz:
 
 \dividiritensdiv{3}{
 \task[\pers{a}] $A = \begin{pmatrix}
@@ -9711,6 +9763,7 @@ qualquer $v \in V,$ então $T$ é autoadjunto.
 3 & -1
 \end{pmatrix}$
 }
+\end{exercicio}
 \solucao{
 \dividiritens{
 \task[\pers{a}] Vamos primeiramente encontrar os autovalores e autovetores de $A.$ Temos:
@@ -9935,16 +9988,19 @@ Logo,
 } 
 }
 
-\exercicio{39} Seja $T \in \mathcal{L}(\mathbb{C}^2)$ definido por $T(1, 0) = (1 + i, 2)$ e $T(0, 1) = (i, i).$ $T$ é normal?
-
+\begin{exercicio}
+ 
+Seja $T \in \mathcal{L}(\mathbb{C}^2)$ definido por $T(1, 0) = (1 + i, 2)$ e $T(0, 1) = (i, i).$ $T$ é normal?
+\end{exercicio}
 \solucao{Não. Veja o exercício 14 da lista 5.}
 
-\exercicio{40} Sejam $V$ um espaço unitário e $T \in \mathcal{L}(V)$ um operador normal. Mostre que
+\begin{exercicio}
+ Sejam $V$ um espaço unitário e $T \in \mathcal{L}(V)$ um operador normal. Mostre que
 \dividiritens{
 \task[\pers{a}] $T$ é autoadjunto se e somente se $\mbox{Spec }T \subseteq \mathbb{R}.$
 \task[\pers{b}] $T$ é unitário se e somente se, para todo $\lambda \in \mbox{Spec }T, \abs{\lambda} = 1.$
 }
-
+\end{exercicio}
 \solucao{
 \dividiritens{
 \task[\pers{a}] Seja $\lambda$ um autovalor de $T.$ Considere $v \neq 0$ um autovetor associado a $\lambda,$ ou seja, tal que $T(v) = \lambda v.$ Observe que
@@ -9977,17 +10033,29 @@ Novamente, a recíproca é análoga.
 }
 }
 
-\exercicio{41} Seja $V = \mathbb{R}^n$ com produto interno usual e $T \in \mathcal{L}(\mathbb{R}^n).$ Suponhamos que $v_1 = (1, 1, \ldots , 1), v_2 = (1, 1, \ldots , 1, 0), \ldots , v_n = (1, 0, .\ldots, 0)$ sejam autovetores de $T.$
+\begin{exercicio}
+Seja $V = \mathbb{R}^n$ com produto interno usual e $T \in \mathcal{L}(\mathbb{R}^n).$ Suponhamos que $v_1 = (1, 1, \ldots , 1), v_2 = (1, 1, \ldots , 1, 0), \ldots , v_n = (1, 0, .\ldots, 0)$ sejam autovetores de $T.$
 Mostre que $T$ é autoadjunto se e somente se $T$ possui um único autovalor.
+\end{exercicio}
 \solucao{$(\Rightarrow)$ Suponha que $T$ seja autoadjunto. Considere $\lambda_i \in \mathbb{R}$ (pelo exercício 40) autovalores distintos de $T.$ Temos portanto que:
 \[
-T(1, 1, \ldots , 1) = \lambda_1(1, 1, \ldots , 1)
+\begin{array}{ccc}
+T(1, 1, \ldots , 1, 1, 1) &=& \lambda_1(1, 1, \ldots , 1, 1, 1) \\
+T(1, 1, \ldots , 1, 1, 0) &=& \lambda_2(1, 1, \ldots , 1, 1, 0) \\
+T(1, 1, \ldots , 1, 0, 0) &=& \lambda_3(1, 1, \ldots , 1, 0, 0)  \\
+& \vdots & \\
+T(1, 0, \ldots , 0, 0, 0) &=& \lambda_n(1, 0, \ldots , 0, 0, 0) \\
+\end{array}
 \]
-
+Assim, veja que
+\[
+T(2, 1, 0, \ldots, 0) = 2T(v_{n}) + T(v_{n-1}) = (2
+\]
 
 }
 
-\exercicio{42} Consideremos $V = \mathbb{C}$ como um $\mathbb{R}$-espaço vetorial.
+\begin{exercicio}
+Consideremos $V = \mathbb{C}$ como um $\mathbb{R}$-espaço vetorial.
 \dividiritens{
 \task[\pers{a}] Mostre que $\prin{\alpha, \beta} = \mbox{Re}(\alpha \overline{\beta})$ é um produto interno em $\mathbb{C}.$
 
@@ -9998,7 +10066,7 @@ que $(M_{\gamma})^{*} = M_{\overline{\gamma}}.$
 
 \task[\pers{d}] Para quais $\gamma \in \mathbb{C}$, $M_{\gamma}$ é unitário?
 }
-
+\end{exercicio}
 \solucao{
 \dividiritens{
 \task[\pers{a}] Vamos verificar os axiomas de produto interno:
@@ -10174,6 +10242,7 @@ ix+(3+2i)y = \left( (2+i) + (1+i) \sqrt{\frac{3}{2}} \right)y
 \end{itemize}
 }
 }
+
 \begin{exercicio}
 Mostre que se $T$ é normal, então $\Ker T = \Ker T^{*}$ e $\mbox{Im } T = \mbox{Im } T^{*}.$
 \end{exercicio}
@@ -10195,7 +10264,11 @@ Mostre que se $T$ é normal, então $\Ker T = \Ker T^{*}$ e $\mbox{Im } T = \mbo
 \begin{exercicio}
 Mostre que $T \in \mathcal{L}(V)$ é normal se, e somente se, $\norm{T(v)} = \norm{T^{*}(v)} \ \forall v \in V.$
 \end{exercicio}
-\solucao{
+\solucao{Mostremos que $\prin{T(v), T(v)} = \prin{T^{*}(v), T^{*}(v)},$ para todo $v \in V.$ De fato,
+\[
+\prin{T(v), T(v)} = \prin{v, T^{*}T(v)} = \prin{v, TT^{*}(v)} = \prin{T^{*}(v), T^{*}(v)}.
+\]
+Como $\norm{T(v)} = \sqrt{\print{T(v), T(v)}}$ e $\norm{T^{*}(v)} = \sqrt{\print{T^{*}(v), T^{*}(v)}},$ segue o resultado desejado. 
 }
 \begin{exercicio}
 Seja $V = \mathcal{P}_n(\mathbb{R})$ com produto interno $\prin{f,g} = \displaystyle\int\limits_{-1}^1 f(x)g(x) \dif x.$ Prove que o operador $T \in \mathcal{L}(V)$ dado por
@@ -10240,11 +10313,27 @@ Logo, temos que
 \]
 }
 \begin{exercicio}
-Um operador $S$ chama-se antiauto-adjunto se $S^{*} = -S.$ Mostre que um operador $T$ é autoadjunto se, e somente se, o operador $iT$ é antiautoadjunto.
+Um operador $S$ chama-se anti-autoadjunto se $S^{*} = -S.$ Mostre que um operador $T$ é autoadjunto se, e somente se, o operador $iT$ é anti-autoadjunto.
+\end{exercicio}
+\solucao{$(\Rightarrow)$ Se $T$ é autoadjunto, então $T^{*} = T.$ Logo,
+\[
+(iT)^{*} = \overline{i}T^{*} = iT^{*} = iT
+\]
+Portanto, $iT$ é anti-autoadjunto.
+$(\Leftarrow)$ Se $iT$ é anti-autoadjunto, então
+\[
+iT = (iT)^{*} = \overline{i}T^{*} = iT^{*} 
+\]
+Portanto, $T^{*} = T$ e $T$ é autoadjunto.
+} 
+
+\begin{exercicio}
+Mostre que uma matriz triangular é normal se, e somente se, ela é diagonal.
 \end{exercicio}
 \solucao{}
+
 \begin{exercicio}
-Seja $V$ um espaço euclidiano e $T \in \mathcal{L}(V)$ é um operador antiauto-. Prove que se $\dim_{\mathbb{R}}(V)$ é ímpar então $T$ é degenerado.
+Seja $V$ um espaço euclidiano e $T \in \mathcal{L}(V)$ é um operador antiautoadjunto. Prove que se $\dim_{\mathbb{R}}(V)$ é ímpar então $T$ é degenerado.
 \end{exercicio}
 \solucao{}
 
@@ -10309,7 +10398,160 @@ Decomponha num produto $T = SU$ de um operador auto-adjunto positivo definido $S
 \solucao{}
 
 \begin{exercicio}
+Determine a matriz de cada uma das formas bilineares abaixo, relativamente à base especificada:
+\dividiritens{
+\task[\pers{a}] $f \colon \mathbb{R}^4 \times \mathbb{R}^4 \to \mathbb{R}$ dada por $f(u,v) = \langle u,v \rangle,$ $\forall u,v \in \mathbb{R}^4,$ com relação à base
+\[
+\mathcal{B} = \{ (-2,0,3,1), (1,2,1,-1), (0,1,2,-1),(1,2,3,1) \}
+\]
+\task[\pers{b}] $f \colon \mathbb{C}^3 \times \mathbb{C}^3 \to \mathbb{C}$ dada por $f(u,v) = \langle u, a \rangle \langle b, v \rangle,$ com $a,b \in \mathbb{C}^3$ fixos, com relação à base canônica e $\mathbb{C}^3$ 
+\task[\pers{c}] $f \colon \mathbb{R}^3 \times \mathbb{R}^3 \to \mathbb{C}$ dada por $f(u,v) = \langle T(u), v \rangle,$ onde $T \in \mathcal{L}(\mathbb{R}^3),$ com relação à base canônica de $\mathbb{R}^3.$  
+}
+\end{exercicio}
+\solucao{
+\dividiritens{
+\task[\pers{a}] Sejam $u_1 = (-2,0,3,1), u_2 = (1,2,1,-1), u_3 = (0,1,2,-1)$ e $u_4 = (1,2,3,1).$ Tomando $A = [a_{ij}],$ com $a_{ij} = f(u_i, u_j),$ obtemos
+\[
+\begin{array}{cccc}
+a_{11} = f(u_1,u_1) = 14 & a_{12} = f(u_1, u_2) = 0 & a_{13} = f(u_1, u_3) = 5 & a_{14} = f(u_1,u_4) = 8 \\
+a_{21} = f(u_2,u_1) = 0 & a_{22} = f(u_2, u_2) = 7 & a_{23} = f(u_2, u_3) = 5 & a_{24} = f(u_2,u_4) = 7 \\
+a_{31} = f(u_3,u_1) = 5 & a_{32} = f(u_3, u_2) = 5 & a_{33} = f(u_3, u_3) = 6 & a_{34} = f(u_3,u_4) = 7 \\
+a_{41} = f(u_4,u_1) = 8 & a_{42} = f(u_4, u_2) = 7 & a_{43} = f(u_4, u_3) = 7 & a_{44} = f(u_4,u_4) = 15 \\
+\end{array}
+\]
 
+Assim, 
+\[
+A =\begin{pmatrix}
+14 &0 & 5 &  8 \\
+0 &  7 &  5 &7 \\
+5 &  5 & 6 & 7 \\
+ 8 &  7 &  7 &  15
+\end{pmatrix}
+\]
+é a matriz de $f$ na base $\mathcal{B} = \{ u_1, u_2, u_3, u_4 \}.$
+}
+}
+
+
+\begin{exercicio}
+ Sejam $u = (x_1, x_2, x_3, x_4)$ e $v = (y_1, y_2, y_3, y_4).$ Para cada caso abaixo, escreva $f$ na forma matricial: \dividiritens{
+ \task[\pers{a}] $f(u,v) = \prin{u,v};$
+ \task[\pers{b}] $f(u,v) = 3x_1y_1 - 2x_1y_3 + 7x_4y_1 + 5x_2y_1 + 7x_2y_2 - 11 x_4y_3 + 8x_2y_3 - 5x_3y_2 + 6x_3y_3 + x_1y_4 - 3x_2y_4 + 6x_4y_4.$
+ }
+\end{exercicio}
+\solucao{
+\dividiritens{
+\task[\pers{a}] Temos que
+\[f(u,v) = \langle u, v \rangle = x_1y_1 + x_2y_2+ x_3y_3+ x_4y_4\]
+ Seja $A = [a_{ij}],$ em que $a_{ij}$ é o coeficiente de $x_iy_j.$ Então,
+ \[
+ f(u,v) = u^T Av = \begin{bmatrix}
+ x_1 & x_2& x_3& x_4
+ \end{bmatrix} \begin{bmatrix}
+ 1 & 0 & 0 & 0 \\
+ 0 & 1 & 0 & 0 \\
+ 0 & 0 & 1 & 0 \\
+ 0 & 0 & 0 & 1 
+ \end{bmatrix} \begin{bmatrix}
+ y_1 \\
+ y_2 \\
+ y_3 \\
+ y_4
+ \end{bmatrix}
+ \]
+ \task[\pers{b}]
+ Seja $A = [a_{ij}],$ em que $a_{ij}$ é o coeficiente de $x_iy_j.$ Então,
+ \[
+ f(u,v) = u^T Av = \begin{bmatrix}
+ x_1 & x_2& x_3& x_4
+ \end{bmatrix} \begin{bmatrix}
+ 3 & 0 & -2 & 1 \\
+ 5 & 7 & 8 & -3 \\
+ 0 & -5 & 6 & 0 \\
+ 7 & 0 & -11 & 6
+ \end{bmatrix} \begin{bmatrix}
+ y_1 \\
+ y_2 \\
+ y_3 \\
+ y_4
+ \end{bmatrix}
+ \]
+}
+}
+\begin{exercicio}
+Seja $V$ um $K$-espaço vetorial e $h, g \in V^{*}.$ Considere $f \colon V \times V \to K$ dada por
+\[f(u, v) = h(u)g(v) - h(v)g(u).\]
+\dividiritens{
+\task[\pers{a}] Mostre que $f$ é uma forma bilinear anti-simétrica, isso é, $f(u, v) = -f(v, u).$
+\task[\pers{b}] Mostre que $f = 0$ se e somente se $h$ e $g$ são linearmente dependentes.
+%existe $\lambda \in K$ tal que $h = \lambda g.$
+}
+\end{exercicio}
+\solucao{
+\dividiritens{
+\task[\pers{a}] Se $f(v,v) = 0,$ para todo $v \in V,$ então $f$ é antissimétrica. Assim,
+\[
+f(v,v) = h(v)g(v) - h(v)g(v) = 0.
+\]
+\task[\pers{b}] Se $f = 0,$ então 
+\[
+f(u,v) = 0 \Rightarrow h(u)g(v) - h(v)g(u) = 0 \Rightarrow h(u)g(v) = h(v)g(u) \Rightarrow  \alpha h(u) + \beta g(u) = 0 \ \forall u \in V,
+\]
+onde $\alpha = g(v)$ e $\beta = -h(v).$ Logo, $g$ e $h$ são linearmente dependentes. Reciprocamente, se $g$ e $h$ são linearmente dependentes, então existem constantes $\alpha$ e $\beta$ tais que
+\[
+\alpha g + \beta h = 0.
+\]
+Em particular,
+\[
+\alpha g(u) + \beta h(u) = 0 \Rightarrow h(u) = - \frac{\alpha}{\beta}g(u) \quad \mbox{e} \quad \alpha g(v) + \beta h(v) = 0 \Rightarrow h(v) = - \frac{\alpha}{\beta} g(v).
+\]
+Logo,
+\[
+f(u,v) = h(u)g(v) - h(v)g(u) = \left(- \frac{\alpha}{\beta}g(u) \right)g(v) - \left( \frac{\alpha}{\beta} g(v) \right) g(u) = -\frac{\alpha}{\beta} g(u)g(v) + \frac{\alpha}{\beta} g(u)g(v) = 0, \forall u,v \in V
+\]
+Portanto, concluímos que $f \equiv 0.$
+}
+}
+
+\begin{exercicio}
+ Seja $f \colon V \times V \to K$ uma forma bilinear simétrica. Mostre que se $f(v, v) = 0$ para todo $v \in V,$ então $f = 0.$ A recíproca é verdadeira?
+\end{exercicio}
+\solucao{Se $f(v,v) = 0,$ para todo $v \in V,$ então $f$ é antissimétrica. Logo, para todo $u,v \in V,$ temos que $f(u,v) - f(v,u).$ Logo,
+\[
+\begin{cases}
+f(u,v) = f(v,u) \\
+f(u,v) = -f(v,u)
+\end{cases} \Rightarrow f(u,v) = 0 \ \forall u, v \in V.
+\]
+Logo, $f \equiv 0.$
+}
+\begin{exercicio}
+ Para cada caso, encontre uma transformação ortogonal que reduza a forma quadrática aos eixos
+principais:
+\dividiritens{
+\task[\pers{a}] $6x_1^2 + 5x_2^2+ 7x_3^2 - 4x_1x_2 + 4x_1x_3;$
+\task[\pers{b}] $x_1^2 + x_2^2 + x_3^2 + 4x_1x_2 + 4x_1x_3 + 4x_2x_3;$
+\task[\pers{c}] $2x_1x_2 - 6x_1x_3 - 6x_2x_4 + 2x_3x_4.$
+}
+\end{exercicio}
+\solucao{}
+\begin{exercicio}
+ Dada a quádrica cuja equação no sistema $\{0, i, j, k \}$ é $z^2  - 2xy-x+y  = 4,$ seja um sistema ortonormal $\{ 0^{\prime}, e_1, e_2, e_3 \}$ no qual sua equação fica na forma reduzida. Encontre:
+ \dividiritens{
+\task[\pers{a}] Os vetores $e_1, e_2, e_3;$
+\task[\pers{b}] As coordenadas do ponto $0^{\prime}$ no sistema $\{ 0^{\prime}, e_1, e_2, e_3 \};$
+\task[\pers{c}] A equação reduzida da quádrica e sua natureza.
+}
+\end{exercicio}
+\solucao{}
+\begin{exercicio}
+ Reconhecer as quádricas abaixo, dados em relação ao sistema ortogonal $\{0, i, j, k\}:$%http://www.mat.ufrgs.br/~calculo/quadrica/classi.htm
+  \dividiritens{
+\task[\pers{a}] $5x^2 + 6y^2 + 7z^2 + 4xy - 4xz - 18x - 12y + 618z - 18 = 0.$
+\task[\pers{b}] $x^2 + y^2 + z^2 - 2xy + 2xz - 2yz - 4x + 4y - 4z + 1 = 0.$
+\task[\pers{c}] $3y^2 + 3z^2 - 4xy - 4xz - 2yz + 2x + y + z = 0.$
+}
 \end{exercicio}
 \textcolor{white}{oi}
 \newline
@@ -10366,7 +10608,7 @@ i & 3+2i
 \end{bmatrix}
 \]
 \[
-A^{*} =  \begin{bmatrix}
+A^{*}A =  \begin{bmatrix}
 1 & -i \\
 1 & 3-2i
 \end{bmatrix} \begin{bmatrix}
